<?xml version="1.0"?>
<package format="3">
  <name>ndt_omp</name>
  <version>0.0.0</version>
  <description>OpenMP boosted NDT and GICP algorithms</description>

  <maintainer email="koide@aisl.cs.tut.ac.jp">koide</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>
